<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/cc_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cc_holder_hint"
                android:inputType="textPersonName|textCapWords" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <com.alihafizji.library.CreditCardEditText
                android:id="@+id/cc_number_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cc_number_hint"
                android:inputType="textNoSuggestions" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/cc_cvc_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cc_cvc_hint"
                android:inputType="textEmailAddress"
                android:maxLength="4" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/cc_expiration_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cc_expiration_hint"
                android:inputType="date" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/submit_btn"
            style="@style/BlueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/register_text" />
    </LinearLayout>
</ScrollView>
