<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize">

                <com.baneizalfe.gocarinthia.ui.SquareImageView
                    android:id="@+id/user_action_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ebebeb" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="16dp"
                    android:src="@drawable/headerlogoonly" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:minHeight="?listPreferredItemHeight">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/statusBg"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/current_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/current_time"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/current_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </RelativeLayout>
            </FrameLayout>


            <FrameLayout
                android:id="@+id/e_ticket_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:minHeight="?listPreferredItemHeight">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/home_list_item_bg"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/e_ticket_title"
                        style="@style/HomeItemTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@+id/e_ticket_action"
                        android:text="@string/eticket_title" />

                    <TextView
                        android:id="@+id/e_ticket_action"
                        style="@style/HomeItemAction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="16dp"
                        android:text="@string/eticket_action"
                        android:onClick="startQRActivity" />

                </RelativeLayout>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:minHeight="?listPreferredItemHeight">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/home_list_item_bg"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/bill_title"
                        style="@style/HomeItemTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/bill_title" />

                    <TextView
                        android:id="@+id/bill_action"
                        style="@style/HomeItemAction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/bill_action" />
                </RelativeLayout>
            </FrameLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:minHeight="?listPreferredItemHeight">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/pax_title"
                        style="@style/HomeItemTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/passengers_title" />

                    <TextView
                        android:id="@+id/pax_action"
                        style="@style/HomeItemAction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/passenger_action" />
                </RelativeLayout>
            </FrameLayout>

        </LinearLayout>

    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
